--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -445,7 +445,7 @@ function doSearch(button,newSearch) {
 		enableIcon("#sortIcon",true);
 	}
 
-	window.scrollTo(0,0);
+	scrollToTop();
 	if ( !filter ) {
 		updateContent();
 		return;
@@ -680,20 +680,19 @@ function previousApps(button,installed) {
 	clearCategory();
 	setPageOne();
 	data.docker = "";
-	if ( installed ) {
-		$(".multi_installDiv").hide();
-	} else {
-		$(".multi_installDiv").show();
-		clearMultiInstall();
-	}
 
 	clearSearchBox();
-
 	$(".dockerSearch").hide();
 	enableIcon("#sortIcon",true);
 
 	$.post(URL,{action:'previous_apps',installed:installed},function(data) {
 		if (data) {
+			if ( installed ) {
+				$(".multi_installDiv").hide();
+			} else {
+				$(".multi_installDiv").show();
+				clearMultiInstall();
+			}
 			changeSortOrder(null,null,"true");
 			saveState();
 		}
@@ -710,6 +709,7 @@ function removeApp(application, humanName) {
 		confirmButtonText: "Yes, delete it!",
 		showCancelButton: true,
 		showConfirmButton: true,
+		allowOutsideClick: true,
 		html: true
 	}, function(isConfirm) {
 		if (isConfirm) {
@@ -740,6 +740,7 @@ function uninstallApp(application,humanName) {
 			confirmButtonText: "Yes, uninstall it!",
 			closeOnConfirm: false,
 			showLoaderOnConfirm: true,
+			allowOutsideClick: true,
 			html: true
 		}, function(isConfirm) {
 			if (isConfirm) {
@@ -770,6 +771,7 @@ function deletePrivateApp(path,name,author) {
 			confirmButtonText: "Yes, remove it!",
 			closeOnConfirm: false,
 			showLoaderOnConfirm: true,
+			allowOutsideClick: true,
 			html: true
 	}, function(isConfirm) {
 		if ( isConfirm ) {
@@ -804,6 +806,7 @@ function uninstallDocker(application,humanName) {
 		confirmButtonText: "Yes, uninstall it!",
 		closeOnConfirm: false,
 		showLoaderOnConfirm: true,
+		allowOutsideClick: true,
 		html: true
 	}, function( isConfirm ) {
 		if ( isConfirm ) {
@@ -1016,6 +1019,7 @@ function installMulti() {
 		confirmButtonText: buttonText,
 		closeOnConfirm: false,
 		showLoaderOnConfirm: true,
+		allowOutsideClick: true,
 		html: true
 	}, function( isConfirm ) {
 		if ( isConfirm ) {
@@ -1066,7 +1070,6 @@ function afterUpdateDisplay() {
 	setToolTip();
 	enableSearch();
 	saveState();
-	handle_HTTP_icons();
 }
 
 function handle_HTTP_icons() {
