--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -414,6 +414,7 @@ function sweetAlertBackground(color) {
 }
 
 function doSearch(button,newSearch) {
+	searchBoxAwesomplete.close();
 	hideSortIcons();
 
 	if ( ! newSearch === false ) {
