--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -51,8 +51,8 @@ data.currentpage = 1;
 var dockerSearchFlag = false;
 
 $(function(){
-	if ( typeof PluginUpdateCheck == "function" ) {
-		PluginUpdateCheck("community.applications.plg");
+	if ( typeof caPluginUpdateCheck == "function" ) {
+		caPluginUpdateCheck("community.applications.plg");
 	}
 	
 	$("#title").append('<div id="Category" class="categoryLine ca_italic"></div>');
