--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Appfeed.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Appfeed.page
@@ -14,9 +14,10 @@ require_once("/usr/local/emhttp/plugins/community.applications/include/paths.php
 require_once("/usr/local/emhttp/plugins/community.applications/include/helpers.php");
 $backup = $_GET['source'] == "backup";
 $source = $backup ? $communityPaths['application-feedBackup'] : $communityPaths['application-feed'];
-$appfeed = download_json($communityPaths['application-feed'],"{$communityPaths['tempFiles']}/appfeed-check.json");
+$appfeed = download_json($source,"{$communityPaths['tempFiles']}/appfeed-check.json");
 $appfeed = str_replace("\n","<br>",print_r($appfeed,true));
 $appfeed = str_replace(" ","&nbsp;",$appfeed);
+@unlink("{$communityPaths['tempFiles']}/appfeed-check.json");
 ?>
 <h3>
 <? if ( ! $backup ):?>
@@ -24,6 +25,7 @@ PRIMARY APPFEED
 <?else:?>
 BACKUP AppFeed
 <?endif;?>
-</h3> switch to <a href='/Apps/Appfeed?source=<?if (!$backup):?>backup<?endif;?>' target='_self'><?if (!$backup):?>Backup <?else:?>Primary <?endif;?>AppFeed</a>
+</h3>
+(<?=$source?>)<br><br> switch to <a href='/Apps/Appfeed?source=<?if (!$backup):?>backup<?endif;?>' target='_self'><?if (!$backup):?>Backup <?else:?>Primary <?endif;?>AppFeed</a> 
 <br><br>
 <font face='courier'><?=$appfeed?></font>
