--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
@@ -27,8 +27,8 @@ function ca_PluginUpdate_openBox(cmd,title,height,width,load,func) {
 	Shadowbox.open({content:run, player:'iframe', title:title, height:height, width:width, options:options});
 }
 
-function ca_hidePluginUpdate() {
-	$.cookie(ca_PluginUpdatePLG,"true");
+function ca_hidePluginUpdate(version) {
+	$.cookie(ca_PluginUpdatePLG,version);
 	$(ca_PluginUpdateElement).hide();
 }
 
@@ -42,8 +42,6 @@ function ca_pluginUpdate_evaluateBoolean(str) {
 }
 
 function caPluginUpdateCheck(plugin,options=[],callback) {
-	if ( $.cookie(plugin) ) return;
-	
 	ca_PluginUpdatePLG = plugin;
 	pluginFilename = plugin.substr(0, plugin.lastIndexOf("."));
   $.post("/plugins/community.applications/scripts/PluginAPI.php",{action:'checkPlugin',
@@ -53,14 +51,15 @@ function caPluginUpdateCheck(plugin,options=[],callback) {
 	},function(data) {
 			if (data) {
 				var result = JSON.parse(data);
+				if ( $.cookie(plugin) == result.version ) return;
 				if ( options.debug == true ) {
 					result.updateAvailable = true;
 				}
 				if ( result.updateAvailable ) {
 					var name = options.name ? options.name : "this plugin ("+plugin+")";
-					var HTML = "An upgrade to "+name+" is available  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=openBox('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
+					var HTML = "An upgrade to "+name+" is available  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=openBox('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
 					if ( ! ca_pluginUpdate_evaluateBoolean(options.noDismiss) ) {
-						HTML = HTML.concat("<span class='ca_PluginUpdateDismiss'><i class='fa fa-close' onclick='ca_hidePluginUpdate();'></i>");
+						HTML = HTML.concat("<span class='ca_PluginUpdateDismiss'><i class='fa fa-close' onclick='ca_hidePluginUpdate(&quot;"+result.version+"&quot;);'></i>");
 					}
 					ca_PluginUpdateElement = options.element ? options.element : ".ca_plugin_notice";
 
@@ -73,6 +72,7 @@ function caPluginUpdateCheck(plugin,options=[],callback) {
 						$(ca_PluginUpdateElement).addClass("ca_element_notice").show();
 					}
 				}
+				
 				if ( typeof options === "function" ) {
 					callback = options;
 				}
