--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
@@ -36,6 +36,13 @@ function ca_pluginUpdateInstall(plugin) {
 	ca_PluginUpdate_openBox("/plugins/community.applications/scripts/installPluginUpdate.sh&arg1="+plugin,"Installing Update",600,900,true,"window.location.reload()");
 }
 
+function ca_pluginUpdateShowInfo(cmd,title,height,width,load,func,id) {
+  // open shadowbox window (run in foreground)
+  var run = cmd.split('?')[0].substr(-4)=='.php' ? cmd : '/logging.htm?cmd='+cmd+'&csrf_token=<?=$var['csrf_token']?>';
+  var options = load ? (func ? {modal:true,onClose:function(){setTimeout(func+'('+'"'+(id||'')+'")',0);}} : {modal:false,onClose:function(){location=location;}}) : {modal:false};
+  Shadowbox.open({content:run, player:'iframe', title:title, height:Math.min(height,screen.availHeight), width:Math.min(width,screen.availWidth), options:options});
+}
+
 function ca_pluginUpdate_evaluateBoolean(str) {
 	regex=/^\s*(true|1|on)\s*$/i
 	return regex.test(str);
@@ -57,7 +64,7 @@ function caPluginUpdateCheck(plugin,options=[],callback) {
 				}
 				if ( result.updateAvailable ) {
 					var name = options.name ? options.name : "this plugin ("+plugin+")";
-					var HTML = "An upgrade to "+name+" is available  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=openBox('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
+					var HTML = "An upgrade to "+name+" is available.  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=ca_pluginUpdateShowInfo('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
 					if ( ! ca_pluginUpdate_evaluateBoolean(options.noDismiss) ) {
 						HTML = HTML.concat("<span class='ca_PluginUpdateDismiss'><i class='fa fa-close' onclick='ca_hidePluginUpdate(&quot;"+result.version+"&quot;);'></i>");
 					}
